deploy/traefik/camofleet-vnc-strip-mw.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: camofleet-vnc-strip
  namespace: camofleet
spec:
  stripPrefixRegex:
    regex:
      - ^/vnc/[^/]+
